# AmnesiaAMachineForPigs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Game/src/game/: CMakeLists.txt  Lux.icns  Lux.rc  Lux.sln  Lux.vcxproj  Lux.vcxproj.filters  LuxAchievementHandler.cpp  LuxAchievementHandler.h  LuxAnimatedProp.cpp  LuxAnimatedProp.h  LuxArea.cpp  LuxArea.h  LuxAreaNodes.cpp  LuxAreaNodes.h  LuxArea_ColorGrading.cpp  LuxArea_ColorGrading.h  LuxArea_Examine.cpp  LuxArea_Examine.h  LuxArea_Flashback.cpp  LuxArea_Flashback.h  LuxArea_Infection.cpp  LuxArea_Infection.h  LuxArea_Ladder.cpp  LuxArea_Ladder.h  LuxArea_Liquid.cpp  LuxArea_Liquid.h  LuxArea_Rope.cpp  LuxArea_Rope.h  LuxArea_Script.cpp  LuxArea_Script.h  LuxArea_Sign.cpp  LuxArea_Sign.h  LuxArea_SlimeDamage.cpp  LuxArea_SlimeDamage.h  LuxArea_Sticky.cpp  LuxArea_Sticky.h  LuxBase.cpp  LuxBase.h  LuxCommentaryIcon.cpp  LuxCommentaryIcon.h  (+189 more)
Game/src/launcher/: CMakeLists.txt  Launcher.sln  LauncherHelper.cpp  LauncherHelper.h  Main.cpp  QualityChooser.cpp  QualityChooser.h  glut.h  launcher.cpp  launcher.fl  launcher.h  launcherCz.cpp  launcherCz.h  launcherRus.cpp  launcherRus.h  resource.h
Game/src/launcher-macosx/: CMakeLists.txt  HPLMinimal.h  HPLMinimal.mm  Launcher-Info.plist  LauncherAppDelegate.h  LauncherAppDelegate.mm  MainWindow.xib  TabBackground.h  TabBackground.m  main.m
HPL2/: CMakeLists.txt  buildcounter.pl
HPL2/core/: CMakeLists.txt  SDLMain.h  SDLMain.m  _HPL2_2010.vcxproj  _HPL2_2010.vcxproj.filters
HPL2/core/include/: BuildID_HPL2_0.h  hpl.h
HPL2/core/sources/: BuildID_HPL2_0_Linux.cpp  BuildID_HPL2_0_Win32.cpp
HPL2/include/: FixPreprocessor.h  ResourcesLocation.h  ResourcesLocation.h.in  hpl.h
HPL2/include/ai/: AI.h  AINodeContainer.h  AINodeGenerator.h  AStar.h  StateMachine.h
HPL2/include/engine/: Engine.h  EngineInitVars.h  EngineInterface.h  EngineTypes.h  Environment.h  Event.h  IUpdateEventLoop.h  Interface.h  LowLevelEngineSetup.h  QueuedEventLoopHandler.h  RTTI.h  SaveGame.h  ScriptFuncs.h  UpdateEventLoop.h  Updateable.h  Updater.h
HPL2/include/generate/: Generate.h  GenerateTypes.h  VoxelMap.h
HPL2/include/graphics/: AnimatedImage.h  Animation.h  AnimationTrack.h  Bitmap.h  Bone.h  BoneState.h  Color.h  DecalCreator.h  Enum.h  FontData.h  ForgeHandles.h  ForgeImmediatDraw.h  ForgeRenderer.h  FrameBase.h  FrameBitmap.h  FrameBuffer.h  FrameSubImage.h  FrameTexture.h  Graphics.h  GraphicsTypes.h  Image.h  ImageResourceWrapper.h  ImmediateDrawBatch.h  IndexPool.h  LowLevelGraphics.h  Material.h  MaterialResource.h  MaterialType.h  MaterialType_BasicSolid.h  MaterialType_BasicTranslucent.h  MaterialType_Decal.h  MaterialType_Water.h  Mesh.h  MeshCreator.h  PassHBAOPlus.h  PostEffect.h  PostEffectComposite.h  PostEffect_Bloom.h  PostEffect_ColorConvTex.h  PostEffect_ImageTrail.h  (+14 more)
HPL2/include/gui/: Gui.h  GuiGfxElement.h  GuiMaterial.h  GuiMaterialBasicTypes.h  GuiPopUp.h  GuiPopUpColorPicker.h  GuiPopUpFilePicker.h  GuiPopUpMessageBox.h  GuiPopUpUIKeyboard.h  GuiSet.h  GuiSkin.h  GuiTypes.h  Widget.h  WidgetBaseClasses.h  WidgetButton.h  WidgetCheckBox.h  WidgetComboBox.h  WidgetContextMenu.h  WidgetDummy.h  WidgetFrame.h  WidgetGroup.h  WidgetImage.h  WidgetLabel.h  WidgetListBox.h  WidgetListBoxBase.h  WidgetMainMenu.h  WidgetMenu.h  WidgetMenuItem.h  WidgetMultiPropertyListBox.h  WidgetSlider.h  WidgetTabFrame.h  WidgetTextBox.h  WidgetWindow.h
HPL2/include/haptic/: Haptic.h  HapticForce.h  HapticShape.h  HapticSurface.h  HapticTypes.h  LowLevelHaptic.h
HPL2/include/impl/: BitmapLoaderDevil.h  BitmapLoaderDevilDDS.h  BitmapLoaderDevilMisc.h  CharacterBodyNewton.h  CollideShapeNewton.h  FmodSoundChannel.h  FmodSoundData.h  GamepadSDL.h  GamepadSDL2.h  GamepadXInput.h  HapticForceHaptX.h  HapticForceHaptX_Impulse.h  HapticForceHaptX_SawWave.h  HapticForceHaptX_SineWave.h  HapticForceHaptX_Spring.h  HapticForceHaptX_Viscosity.h  HapticShapeHaptX.h  HapticSurfaceHaptX.h  HapticSurfaceHaptX_Frictional.h  HapticSurfaceHaptX_Rough.h  HapticSurfaceHaptX_Simple.h  HapticSurfaceHaptX_Sticky.h  KeyboardSDL.h  LegacyVertexBuffer.h  LowLevelGraphicsSDL.h  LowLevelHapticHaptX.h  LowLevelInputSDL.h  LowLevelPhysicsNewton.h  LowLevelResourcesSDL.h  LowLevelSoundFmod.h  LowLevelSoundOpenAL.h  LowLevelSystemSDL.h  MeshLoaderCollada.h  MeshLoaderFBX.h  MeshLoaderMSH.h  MouseSDL.h  OpenALSoundChannel.h  OpenALSoundData.h  OpenALSoundEnvironment.h  PhysicsBodyNewton.h  (+14 more)
HPL2/include/input/: Action.h  ActionGamepadAxis.h  ActionGamepadButton.h  ActionGamepadHat.h  ActionHaptic.h  ActionKeyboard.h  ActionMouseButton.h  BaseInputDevice.h  Gamepad.h  Input.h  InputDevice.h  InputDeviceId.h  InputKeyboardDevice.h  InputManager.h  InputManagerInterface.h  InputMouseDevice.h  InputTypes.h  Keyboard.h  LowLevelInput.h  Mouse.h  MouseInterface.h
HPL2/include/math/: BoundingVolume.h  CRC.h  Crc32.h  Frustum.h  Math.h  MathTypes.h  Matrix.h  MatrixUtils.h  MeshTypes.h  PidController.h  (+9 more)
HPL2/resource/: ShaderList.fsl  bloom_add_posteffect.frag.fsl  blur_posteffect.frag.fsl  color_conv_posteffect.frag.fsl  copy_channel_4.comp.fsl  copy_hi_z.frag.fsl  dds_enemy_glow.frag.fsl  dds_enemy_glow.vert.fsl  dds_flash.frag.fsl  dds_flash.vert.fsl  dds_insanity_posteffect.frag.fsl  dds_inventory_posteffect.frag.fsl  dds_outline.frag.fsl  dds_outline.vert.fsl  dds_outline_copy.frag.fsl  dds_outline_stencil.frag.fsl  dds_outline_stencil.vert.fsl  decal.frag.fsl  decal.vert.fsl  deferred_common.h.fsl  deferred_fog.frag.fsl  deferred_fog.resource.h.fsl  deferred_fog.vert.fsl  deferred_fog_fullscreen.frag.fsl  deferred_light.vert.fsl  deferred_light_box.frag.fsl  deferred_light_pointlight.frag.fsl  deferred_light_resource.h.fsl  deferred_light_spotlight.frag.fsl  deferred_light_stencil.frag.fsl  deferred_resources.h.fsl  final_posteffect.frag.fsl  fullscreen.vert.fsl  generate_hi_z.comp.fsl  gui.frag.fsl  gui.vert.fsl  gui_resource.h.fsl  hbao_courseAO.comp.fsl  hbao_prepareNativeDepths.comp.fsl  hbao_reinterleave.comp.fsl  (+20 more)
HPL2/sources/: BuildID_HPL2_0_Linux.cpp
HPL2/tools/: LuxBasePersonal.h
(+1350 files in other folders)
